# Water-Marker

./: build.gradle  readme.txt  settings.gradle
.github/workflows/: android.yml  debug.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-engine.cpp
app/src/main/java/com/watermarker/: AppOpenAdManager.kt  MainActivity.kt  NativeEngine.kt  OverlayUtils.kt  WaterMarkerApp.kt  WatermarkerApp.kt
app/src/main/res/values/: colors.xml  themes.xml
scripts/: 1-structure-setup.py  2-5-icon-generator.py  2-gradle-config.py  3-manifest-res.py  4-native-engine.py  5-1-kotlin-core.py  5-2-kotlin-ui.py  5-3-kotlin-utils.py  5-4-kotlin-ui-extended.py  5-5-kotlin-app.py  5-kotlin-ui.py  6-build-executor.py  config.json
